# shelf-product-identifier

./: LICENSE  env.yaml  main.py  pyproject.toml  readme.md  requirements.txt
notebooks/: dino2_embeddings_plot.ipynb  predict_image_product.ipynb  testing the model.ipynb  tsne_embeddings._plot.ipynb  tsne_embeddings_plot.ipynb
src/: img2vec_dino2.py  img2vec_resnet18.py
